# shell

./: .gitignore  CMakeLists.txt  README.md  colors.h  history.txt  main.c  shell  shell.c  shell.h
src/: main.c  shell.c
test/: test_history.c  test_main.c  test_parse.c
